# easily-open-server

./: .gitignore  CMakeLists.txt  LICENSE  README.md
docs/: options.html
src/: main.cpp
src/include/server/: ctc.cpp  ctc.h  handleMessage.cpp  handleMessage.h  handler.cpp  handler.h  mrmc.cpp  mrmc.h  oto.cpp  oto.h  srmc.cpp  srmc.h  start_server.cpp  start_server.h  start_server.hpp
src/include/utils/: ip_util.cpp  ip_util.h  ip_util.hpp  options.cpp  options.h  options.hpp
src/test/: client.cpp
test/: c  c1  client  client.cpp  client1.cpp  oc2  otoclient.cpp
